interviewPrep/Google/temp
source.cpp:135:15: error: no matching member function for call to 'insert'
          ans.insert({{i.first,j.first},findCommon(i.second,j.second)});
          ~~~~^~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:509:7: note: candidate function not viable: cannot convert initializer list argument to 'const value_type' (aka 'const std::pair<std::pair<std::basic_string<char>, std::basic_string<char>>, std::basic_string<char>>')
      insert(const value_type& __x)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:518:7: note: candidate function not viable: cannot convert initializer list argument to 'value_type' (aka 'std::pair<std::pair<std::basic_string<char>, std::basic_string<char>>, std::basic_string<char>>')
      insert(value_type&& __x)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:578:7: note: candidate function not viable: cannot convert initializer list argument to 'std::pair<std::pair<std::basic_string<char>, std::basic_string<char>>, std::basic_string<char>>'
      insert(initializer_list<value_type> __l)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:598:7: note: candidate function not viable: cannot convert initializer list argument to 'node_type' (aka '_Node_handle<std::pair<std::pair<std::basic_string<char>, std::basic_string<char>>, std::basic_string<char>>, std::pair<std::pair<std::basic_string<char>, std::basic_string<char>>, std::basic_string<char>>, allocator<std::_Rb_tree_node<std::pair<std::pair<std::basic_string<char>, std::basic_string<char>>, std::basic_string<char>>>>>')
      insert(node_type&& __nh)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:546:7: note: candidate function not viable: requires 2 arguments, but 1 was provided
      insert(const_iterator __position, const value_type& __x)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:551:7: note: candidate function not viable: requires 2 arguments, but 1 was provided
      insert(const_iterator __position, value_type&& __x)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:566:2: note: candidate function template not viable: requires 2 arguments, but 1 was provided
        insert(_InputIterator __first, _InputIterator __last)
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_set.h:603:7: note: candidate function not viable: requires 2 arguments, but 1 was provided
      insert(const_iterator __hint, node_type&& __nh)
      ^
1 error generated.